--- a/result.html
+++ b/result.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Figma Export</title>
-</head>
-<body style="position: relative;">
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body style="position:relative;">
 <div class="Page_1_node-0-1">
 <div class="Travel_Agency_Landing_Page_UI_node-1-514">
 <div class="footer_node-I1-514-1-501">
@@ -978,5 +975,5 @@ and full life</span>
 </div>
 </div>
 
-</body>
+  </body>
 </html>
